--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,15 @@ services:
             - "27017:27017"
         volumes:
             - mongodata:/var/lib/mongodb/data
+    rabbitmq:
+        image: rabbitmq:3-management-alpine
+        ports:
+            - "5672:5672"
+            # Login
+            - "15672:15672"
+        volumes:
+            - rabbitmq/var/lib/rabbitmq/data
 volumes:
     pgdata:
     mongodata:
+    rabbitmq:
