--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,64 @@ services:
             - "15672:15672"
         volumes:
             - rabbitmq/var/lib/rabbitmq/data
+    auction-svc:
+        image: auction-svc:latest
+        build:
+            context: .
+            dockerfile: src/AuctionService/Dockerfile
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_URLS=http://+:80
+            - RabbitMq__Host=rabbitmq
+            - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=auction;Username=postgres;Password=safepass1
+            - IdentityServiceUrl=http://identity-svc
+        ports:
+            - "7000:80"
+        depends_on:
+            - postgres
+            - rabbitmq
+    search-svc:
+        image: search-svc:latest
+        build:
+            context: .
+            dockerfile: src/SearchService/Dockerfile
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_URLS=http://+:80
+            - RabbitMq__Host=rabbitmq
+            - ConnectionStrings__MongoDbConnection=mongodb://root:safepass1@mongodb:27017
+            - AuctionServiceUrl=http://auction-svc
+        ports:
+            - "7001:80"
+        depends_on:
+            - mongodb
+            - rabbitmq
+    idenity-svc:
+        image: identity-svc:latest
+        build:
+            context: .
+            dockerfile: src/IdentityService/Dockerfile
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Docker
+            - ASPNETCORE_URLS=http://+:80
+            - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=identity;Username=postgres;Password=safepass1
+        ports:
+            - "5432:80"
+        depends_on:
+            - postgres
+    gateway-svc:
+        image: gateway-svc:latest
+        build:
+            context: .
+            dockerfile: src/GatewayService/Dockerfile
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Doocker
+            - ASPNETCORE_URLS=http://+:80
+            - AuctionServiceUrl=http://auction-svc
+            - SearchServiceUrl=http://search-svc
+            - IdentityServiceUrl=http://identity-svc
+        ports:
+            - "7002:80"
 volumes:
     pgdata:
     mongodata:
