Fixed errors, and incomplete things.  Also updated some things.

--- a/src/IdentityService/Dockerfile
+++ b/src/IdentityService/Dockerfile
@@ -3,10 +3,10 @@ WORKDIR /app
 EXPOSE 80
 
 COPY Carau.sln Carau.sln
-COPY  src/AuthService/AuthService.csproj src/AuthService/AuthService.csproj
-COPY src/SearcService/SearchService.csproj src/SearcService/SearchService.csproj
+COPY  src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
+COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
 COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
-COPY src/Contrracts/Contrracts.csproj src/Contrracts/Contrracts.csproj
+COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 
 RUN dotnet restore Carau.sln
