--- a/src/AuctionService/Dockerfile
+++ b/src/AuctionService/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 80
 COPY Carau.sln Carau.sln
 COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
-COPY src/Gateway/Gateway.csproj src/Gateway/Gateway.csproj
+COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 
