--- a/src/GatewayService/Dockerfile
+++ b/src/GatewayService/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/sdk:8.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 EXPOSE 80
 
@@ -7,7 +7,7 @@ COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
 COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
-COPY src/IdntityService/IdntityService.csproj src/IdntityService/IdntityService.csproj
+COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 
 RUN dotnet restore Carau.sln
 
