--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -5,32 +5,26 @@
             "Microsoft.AspNetCore": "Information"
         }
     },
+    "AllowedHosts": "*",
     "IdentityServiceUrl": "http://identity-svc",
-    "ReverseProxy": {
-        "search": {
-            "ClusterId": "search",
-            "Match": {
-                "Path": "/search/{**catch-all}"
-            },
-            "Transforms": [
-                {
-                    "PathPattern": "api/search/{**catch-all}"
-                }
-            ]
-        }
+    "RabbitMq": {
+        "Host": "localhost",
+        "Port": 5672
     },
-    "Clusters": {
-        "auctions": {
-            "Destinations": {
-                "auctionApi": {
-                    "Address": "http://auctino-svc"
+    "ReverseProxy": {
+        "Clusters": {
+            "auctions": {
+                "Destinations": {
+                    "auctions": {
+                        "Address": "http://auction-svc"
+                    }
                 }
-            }
-        },
-        "search": {
-            "Destinations": {
-                "searchApi": {
-                    "Address": "http://search-svc"
+            },
+            "search": {
+                "Destinations": {
+                    "search": {
+                        "Address": "http://search-svc"
+                    }
                 }
             }
         }
