--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -9,6 +9,10 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.0-develop.1674"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.2"/>
         <PackageReference Include="MongoDB.Entities" Version="23.0.1"/>
     </ItemGroup>
