End of Section 9.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
         depends_on:
             - mongodb
             - rabbitmq
-    idenity-svc:
+    identity-svc:
         image: identity-svc:latest
         build:
             context: .
