--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "flowbite-react": "^0.8.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "prettier": "^3.2.5",
     "query-string": "^9.0.0",
     "react": "^18",
